

##################################################################################

ADD_SUBDIRECTORY(common)
SET(COMMON_TARGET_LINK ${COMMON_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(exception_handler)
SET(EXCEPTION_HANDLER_TARGET_LINK ${EXCEPTION_HANDLER_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(crash_generation_client)
SET(CRASH_GENERATION_CLIENT_TARGET_LINK ${CRASH_GENERATION_CLIENT_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(crash_generation_server)
SET(CRASH_GENERATION_SERVER_TARGET_LINK ${CRASH_GENERATION_SERVER_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(crash_report_sender)
SET(CRASH_REPORT_SENDER_TARGET_LINK ${CRASH_REPORT_SENDER_TARGET_LINK} PARENT_SCOPE)

ADD_SUBDIRECTORY(crash_generation_app)
